cluster/metrics/custom/podinfo/podinfo-deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: podinfo
  namespace: test
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: podinfo
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: podinfod
        image: stefanprodan/podinfo:latest
        imagePullPolicy: IfNotPresent
        command:
          - ./podinfo
          - --port=9898
          # - --logtostderr=true
          # - -v=1
        volumeMounts:
          - name: metadata
            mountPath: /etc/podinfod/metadata
            readOnly: true
        ports:
        - containerPort: 9898
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 9898
          initialDelaySeconds: 1
          periodSeconds: 2
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 9898
          initialDelaySeconds: 1
          periodSeconds: 3
          failureThreshold: 2
        resources:
          requests:
            memory: "8Mi"
            cpu: "10m"
          limits:
            memory: "10Mi"
            cpu: "50m"
      volumes:
        - name: metadata
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
              - path: "annotations"
                fieldRef:
                  fieldPath: metadata.annotations
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: test
  labels:
    app: podinfo
spec:
  # type: NodePort
  ports:
    - port: 9898
      targetPort: 9898
      # nodePort: 31198
      protocol: TCP
  selector:
    app: podinfo
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: podinfo-ingress
  namespace: test
spec:
  tls:
  - hosts:
    - podinfo.k8n1.k8cluster.io
    secretName: podinfo-secret
  rules:
  - host: podinfo.k8n1.k8cluster.io
    http:
      paths:
      - path: /
        backend:
          serviceName: podinfo
          servicePort: 9898
